<?xml version="1.0" encoding="utf-8"?>
<com.bx5a.minstrel.legacy.SoftKeyboardHandledLayout
    xmlns:image_and_text="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activityMain_drawer">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- top part -->
        <RelativeLayout
            android:id="@+id/activityMain_topPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top">
            <ImageView
                android:id="@+id/activityMain_backgroundLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:alpha="0.1"
                />
        </RelativeLayout>

        <!-- bottom part -->
        <RelativeLayout
            android:id="@+id/activityMain_bottomControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="0"
            android:gravity="bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <fragment
                    android:name="com.bx5a.minstrel.widget.PlayerControlBarFragment"
                    android:id="@+id/activityMain_playerControls"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:layout="@layout/fragment_player_bar" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:id="@+id/activityMain_youtubeFragmentHolder"
                    android:orientation="vertical">
                    <fragment
                        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                        android:id="@+id/youtube_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <!-- Side panel -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/activityMain_sidePanel"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginBottom="110dp"
        style="@style/AccentLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top">

            <com.bx5a.minstrel.widget.ImageAndTextButton
                android:id="@+id/activityMain_historyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                image_and_text:src="@drawable/ic_history"
                image_and_text:text="@string/myMusic"
                image_and_text:textColor="@color/darkGray"/>

            <com.bx5a.minstrel.widget.ImageAndTextButton
                android:id="@+id/activityMain_searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                image_and_text:src="@drawable/ic_search"
                image_and_text:text="@string/search"
                image_and_text:textColor="@color/darkGray"/>

            <com.bx5a.minstrel.widget.ImageAndTextButton
                android:id="@+id/activityMain_playlistButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                image_and_text:src="@drawable/ic_playlist"
                image_and_text:text="@string/playlist"
                image_and_text:textColor="@color/darkGray"/>
        </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom">
        <com.bx5a.minstrel.widget.ImageAndTextButton
            android:id="@+id/activityMain_preferenceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            image_and_text:src="@drawable/ic_parameters"
            image_and_text:text="@string/parameters"
            image_and_text:textColor="@color/darkGray"/>
        <com.bx5a.minstrel.widget.ImageAndTextButton
            android:id="@+id/activityMain_aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            image_and_text:src="@drawable/ic_about"
            image_and_text:text="@string/about"
            image_and_text:textColor="@color/darkGray"/>
        </LinearLayout>

    </LinearLayout>
</com.bx5a.minstrel.legacy.SoftKeyboardHandledLayout>
