...
            android:layout_marginLeft="5dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/viewPlayer_currentSong"
                style="@style/DarkText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="The Currently Playing Song"
                android:textSize="14dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viewPlayer_nextSong"
                style="@style/DarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
...
