...
            <ImageButton
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="?attr/previousIcon"
                android:layout_width="0px"
                android:background="@null"
                android:id="@+id/fragmentPlayer_previous"/>
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_width="0px"
                android:gravity="center">
                <ImageButton
...
            <ImageButton
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="?attr/nextIcon"
                android:layout_width="0px"
                android:background="@null"
                android:id="@+id/fragmentPlayer_next"/>
            <ImageButton
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="0px"
                android:src="?attr/playlistIcon"
...
