<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/listItemVideo_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="information"
        android:maxLines="3"
        android:textStyle="italic"
        android:ellipsize="end"
        android:id="@+id/listItemVideo_description" />
</LinearLayout>